syntax = "proto3";
package quasarlabs.quasarnode.qoracle;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "qoracle/params.proto";
import "qoracle/pool_position.proto";
import "qoracle/pool_ranking.proto";
import "qoracle/pool_spot_price.proto";
import "qoracle/pool_info.proto";
import "qoracle/bandchain.proto";
import "qoracle/osmosis.proto";
import "qoracle/pool_metrics.proto";
import "qoracle/denom_price_mapping.proto";
import "osmosis/v9/epochs/genesis.proto";
import "osmosis/v9/mint/v1beta1/mint.proto";
import "osmosis/v9/pool-incentives/v1beta1/incentives.proto";
import "osmosis/v9/gamm/pool-models/balancer/balancerPool.proto";
import "osmosis/v9/pool-incentives/v1beta1/query.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/quasarlabs/quasarnode/x/qoracle/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/params";
  }
  // Queries a PoolPosition by index.
	rpc PoolPosition(QueryGetPoolPositionRequest) returns (QueryGetPoolPositionResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_position/{poolId}";
	}

	// Queries a list of PoolPosition items.
	rpc PoolPositionAll(QueryAllPoolPositionRequest) returns (QueryAllPoolPositionResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_position";
	}

// Queries a PoolRanking by index.
	rpc PoolRanking(QueryGetPoolRankingRequest) returns (QueryGetPoolRankingResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_ranking";
	}
// Queries a PoolSpotPrice by index.
	rpc PoolSpotPrice(QueryGetPoolSpotPriceRequest) returns (QueryGetPoolSpotPriceResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_spot_price/{poolId}/{denomIn}/{denomOut}";
	}

	// Queries a list of PoolSpotPrice items.
	rpc PoolSpotPriceAll(QueryAllPoolSpotPriceRequest) returns (QueryAllPoolSpotPriceResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_spot_price";
	}

// Queries a PoolInfo by index.
	rpc PoolInfo(QueryGetPoolInfoRequest) returns (QueryGetPoolInfoResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_info/{poolId}";
	}

	// Queries a list of PoolInfo items.
	rpc PoolInfoAll(QueryAllPoolInfoRequest) returns (QueryAllPoolInfoResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/pool_info";
	}

// Queries a list of State items.
	rpc State(QueryStateRequest) returns (QueryStateResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/state";
	}

// Queries a list of OraclePrices items.
	rpc OraclePrices(QueryOraclePricesRequest) returns (QueryOraclePricesResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/oracle_prices";
	}

// Queries a list of OsmosisChainParams items.
	rpc OsmosisChainParams(QueryOsmosisChainParamsRequest) returns (QueryOsmosisChainParamsResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/osmosis/chain_params";
	}

// Queries a list of OsmosisIncentivizedPools items.
	rpc OsmosisIncentivizedPools(QueryOsmosisIncentivizedPoolsRequest) returns (QueryOsmosisIncentivizedPoolsResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/osmosis/incentivized_pools";
	}

// Queries a list of OsmosisPools items.
	rpc OsmosisPools(QueryOsmosisPoolsRequest) returns (QueryOsmosisPoolsResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qoracle/osmosis/pools";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetPoolPositionRequest {
	  string poolId = 1;

}

message QueryGetPoolPositionResponse {
	PoolPosition poolPosition = 1 [(gogoproto.nullable) = false];
}

message QueryAllPoolPositionRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPoolPositionResponse {
	repeated PoolPosition poolPosition = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPoolRankingRequest {}

message QueryGetPoolRankingResponse {
	PoolRanking PoolRanking = 1 [(gogoproto.nullable) = false];
}
message QueryGetPoolSpotPriceRequest {
	  string poolId = 1;
  string denomIn = 2;
  string denomOut = 3;

}

message QueryGetPoolSpotPriceResponse {
	PoolSpotPrice poolSpotPrice = 1 [(gogoproto.nullable) = false];
}

message QueryAllPoolSpotPriceRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPoolSpotPriceResponse {
	repeated PoolSpotPrice poolSpotPrice = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPoolInfoRequest {
	  string poolId = 1;

}

message QueryGetPoolInfoResponse {
	PoolInfo poolInfo = 1 [(gogoproto.nullable) = false];
}

message QueryAllPoolInfoRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPoolInfoResponse {
	repeated PoolInfo poolInfo = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryStateRequest {
}

message QueryStateResponse {
	OracleScriptState coin_rates_state = 1 [(gogoproto.nullable) = false];
	OsmosisRequestState osmosis_params_request_state = 2 [(gogoproto.nullable) = false];
	OsmosisRequestState osmosis_incentivized_pools_state = 3 [(gogoproto.nullable) = false];
	OsmosisRequestState osmosis_pools_state = 4 [(gogoproto.nullable) = false];
}

message QueryOraclePricesRequest {
}

message QueryOraclePricesResponse {
	repeated cosmos.base.v1beta1.DecCoin prices = 1
      [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins"];
  	int64 updated_at_height = 2;
}

message QueryOsmosisChainParamsRequest {
}

message QueryOsmosisChainParamsResponse {
	repeated osmosis.epochs.v1beta1.EpochInfo epochs_info = 1 [(gogoproto.nullable) = false];
	repeated int64 lockable_durations = 2 [(gogoproto.casttype) = "time.Duration"];
	osmosis.mint.v1beta1.Params mint_params = 3 [(gogoproto.nullable) = false];
	string mint_epoch_provisions = 4;
	osmosis.poolincentives.v1beta1.DistrInfo distr_info = 5 [(gogoproto.nullable) = false];
}

message QueryOsmosisIncentivizedPoolsRequest {
}

message QueryOsmosisIncentivizedPoolsResponse {
	repeated osmosis.poolincentives.v1beta1.IncentivizedPool incentivized_pools = 1 [(gogoproto.nullable) = false];
}

message QueryOsmosisPoolsRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryOsmosisPoolsResponse {
	repeated OsmosisPool pools = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
