syntax = "proto3";
package abag.quasarnode.qoracle;

import "qoracle/pool_position.proto";
import "osmosis/gamm/pool-models/balancer/balancerPool.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/abag/quasarnode/x/qoracle/types";

// Msg defines the Msg service.
service Msg {
      rpc CreatePoolPosition(MsgCreatePoolPosition) returns (MsgCreatePoolPositionResponse);
  rpc UpdatePoolPosition(MsgUpdatePoolPosition) returns (MsgUpdatePoolPositionResponse);
  rpc DeletePoolPosition(MsgDeletePoolPosition) returns (MsgDeletePoolPositionResponse);
  rpc BalancerPool(MsgBalancerPool) returns (MsgBalancerPoolResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePoolPosition {
  string creator = 1;
  uint64 poolID = 2;
  uint64 aPY = 3;
  uint64 tVL = 4;
  uint64 lastUpdatedTime = 5;
}
message MsgCreatePoolPositionResponse {}

message MsgUpdatePoolPosition {
  string creator = 1;
  uint64 poolID = 2;
  uint64 aPY = 3;
  uint64 tVL = 4;
  uint64 lastUpdatedTime = 5;
}
message MsgUpdatePoolPositionResponse {}

message MsgDeletePoolPosition {
  string creator = 1;
  uint64 poolID = 2;
}
message MsgDeletePoolPositionResponse {}


message MsgBalancerPool {
  string creator = 1;
  // string address = 2;
  // uint64 uid = 3;
  abag.quasarnode.osmosis.gamm.poolmodels.BalancerPool  balancerPool = 2;
}

message MsgBalancerPoolResponse {
}

// this line is used by starport scaffolding # proto/tx/message